After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 653800 - Segmentation fault: nautilus_icon_container_search_entry_flush_timeout
Segmentation fault: nautilus_icon_container_search_entry_flush_timeout
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Crashers
3.1.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 660503 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-07-01 09:24 UTC by Pedro Villavicencio
Modified: 2011-10-19 21:10 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
icon-container: consolidate typeahead entry timeout handling (11.15 KB, patch)
2011-09-28 20:52 UTC, Cosimo Cecchi
committed Details | Review

Description Pedro Villavicencio 2011-07-01 09:24:30 UTC
This report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/804133

"nautilus is crashing "randomly" and I've seen it happen when I open some folders (not one in specific), when I change from one open tab to another or even by scrolling on a folder:

Program received signal SIGSEGV, Segmentation fault.
nautilus_icon_container_search_entry_flush_timeout (container=0x27e3bc0) at nautilus-icon-container.c:4948
4948 nautilus-icon-container.c: No such file or directory.
 in nautilus-icon-container.c"

Backtrace:

"(gdb) backtrace full
  • #0 nautilus_icon_container_search_entry_flush_timeout
    at nautilus-icon-container.c line 4948
  • #1 g_timeout_dispatch
    at /build/buildd/glib2.0-2.29.8/./glib/gmain.c line 3955
  • #2 g_main_dispatch
    at /build/buildd/glib2.0-2.29.8/./glib/gmain.c line 2477
  • #3 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.8/./glib/gmain.c line 3050
  • #4 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.8/./glib/gmain.c line 3128
  • #5 g_main_loop_run
    at /build/buildd/glib2.0-2.29.8/./glib/gmain.c line 3336
  • #6 gtk_main
    from /usr/lib/libgtk-3.so.0
  • #7 g_application_run
    at /build/buildd/glib2.0-2.29.8/./gio/gapplication.c line 1326
  • #8 main
    at nautilus-main.c line 102

Comment 1 joemburgess 2011-07-20 19:51:32 UTC
This seems to be the same bug as these two
https://bugs.launchpad.net/nautilus/+bug/807263
https://bugzilla.redhat.com/show_bug.cgi?id=650386
Comment 2 Fabio Durán Verdugo 2011-07-31 03:33:38 UTC
I can confirm this bug

Here other stacktrace

Program terminated with signal 11, Segmentation fault.

Thread 1 (Thread 4484)

  • #0 nautilus_icon_container_search_entry_flush_timeout
    at nautilus-icon-container.c line 4947
  • #1 g_timeout_dispatch
    at /build/buildd/glib2.0-2.29.14/./glib/gmain.c line 3991
  • #2 g_main_dispatch
    at /build/buildd/glib2.0-2.29.14/./glib/gmain.c line 2500
  • #3 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.14/./glib/gmain.c line 3083
  • #4 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.14/./glib/gmain.c line 3161
  • #5 g_main_loop_run
    at /build/buildd/glib2.0-2.29.14/./glib/gmain.c line 3369
  • #6 gtk_main
    at /build/buildd/gtk+3.0-3.1.10/./gtk/gtkmain.c line 1367
  • #7 gtk_application_run_mainloop
    at /build/buildd/gtk+3.0-3.1.10/./gtk/gtkapplication.c line 112
  • #8 g_application_run
    at /build/buildd/glib2.0-2.29.14/./gio/gapplication.c line 1325
  • #9 main
    at nautilus-main.c line 102

Comment 3 Cosimo Cecchi 2011-09-28 20:52:17 UTC
The following fix has been pushed:
3429a6f icon-container: consolidate typeahead entry timeout handling


I cannot reproduce this bug, but I pushed a patch to git master which should avoid the crash condition.
Please reopen this report if you can still reproduce with the attached patch.
Comment 4 Cosimo Cecchi 2011-09-28 20:52:21 UTC
Created attachment 197708 [details] [review]
icon-container: consolidate typeahead entry timeout handling

We have crash reports coming from the search entry typeahead code. I
can't really reproduce the bug, but there seems to be at least a problem
with the typeahead flush timeout returning TRUE and being rescheduled.
Refactor the code to better handle the flush timeout, which hopefully
solves those crashes as well.
Comment 5 Cosimo Cecchi 2011-10-19 21:10:22 UTC
*** Bug 660503 has been marked as a duplicate of this bug. ***