icon-container: consolidate typeahead entry timeout handling

We have crash reports coming from the search entry typeahead code. I
can't really reproduce the bug, but there seems to be at least a problem
with the typeahead flush timeout returning TRUE and being rescheduled.
Refactor the code to better handle the flush timeout, which hopefully
solves those crashes as well.

https://bugzilla.gnome.org/show_bug.cgi?id=653800